# ExchangeInABox

./: .gitignore  CMakeLists.txt  Makefile  Order.cpp  Order.hpp  README.md  book.hpp  build.sh  configure.sh  exchange  main  main.cpp
core/: CMakeLists.txt  book.cpp  book.hpp  order.cpp
tests/: CMakeLists.txt  test_main.cpp  test_orders.cpp
